assets/css/style.css
/* ... */
.submit-button {
    display: inline-block;
    font-weight: 400;
    line-height: 1.5;
    color: #212529;
    background-color: #f8f9fa;
    border-color: #f8f9fa;
    text-align: center;
    border: none;
    text-decoration: none;
    vertical-align: middle;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    min-width: 180px;
    margin: 20px 0;
    position: relative;
    top: 60%;
    left: 50%;
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    box-shadow: 2px 2px 11px 0 rgba(0, 0, 0, .5);
    padding: .375rem .75rem;
    font-size: 1rem;
    border-radius: .95rem;
}

.submit-button:hover {
    background-color: #f5c2d4;
    color: white;
}

.submit-button:active{
    box-shadow: 0 0 0 0 rgba(0, 0, 0, .5);
}

.submit-button:focus{
    outline: 0;
}

.empty-space{
    height:1px;
}


/*---------------------------------------------Responsive Screen sizes -----------------------------------------*/

/*********************************************************/

/*-------------------------------------------Small Desktop---------------------------------------*/
@media only screen and (max-width: 991px) {

    /*-----------------------Navbar Media queries--------------------------*/
    #logo img {
        width: 180px;
    }

    .navbar {
        min-height: 80px;
    }

    .nav-link {
        text-align: right;
    }
    
    .nav-item{
        
    }
    .nav-item i{
        display:none;
    }

    .current a i{
        display: none;
    }
    .text-field {
        margin: 0 auto;
    }

    /*-----------------------Home page Media queries--------------------------*/
    .home-container .spash-image {
        width: 400px
    }

    .home-container .main-message {
        font-size: 22px;
        padding: 20px;
    }

    .home-container .main-message h1 {
        font-size: 30px;

    }

    /*-----------------------Prices page Media queries--------------------------*/
    #prices-banner {
        column-count: 2;
        margin-left: auto;
        margin-right: auto;
    }

    #main-prices .row {
        margin-top: 0;
    }

    #main-prices .list-unstyled {
        margin-top: 10px;
        margin-bottom: 30px;
    }
    /*-----------------------Gallery page Media queries--------------------------*/
    
    .responsive {
        width: 49.99999%;
        margin: 6px 0;
    }

}

/*---------------------------------------------Tablet size screen--------------------------------------------*/
@media only screen and (max-width: 768px) {


    /*-----------------------Footer Media queries--------------------------*/
    .footer-row button {
        display: none;
    }

    .text-field {
        position: relative;
        margin-left: 10px 10px;
    }

    /*-----------------------Home pages Media queries--------------------------*/
    .home-container {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        justify-content: center;
        height: 100vh;
    }

    .home-container .spash-image{
        width: 500px;
        margin-top: 200px;
        margin-bottom: 30px
    }

    .home-container .main-message {
        width: 500px;
        margin-bottom: 150px;

    }

    .home-container .main-message h1 {
        font-size: 30px;
    }

    /*-----------------------Prices page Media queries--------------------------*/
    #main-prices .row {
        margin-top: 8%;
    }

    #prices-banner {
        column-count: 1;
        font-size: 20px;
        margin-top: 50px;
        margin-left: auto;
        margin-right: auto;
    }

    #main-prices .row {
        margin-top: 0;
    }

    #main-prices .list-unstyled {
        margin-top: 10px;
        margin-bottom: 30px;
    }
    
 /*-----------------------Gallery page Media queries--------------------------*/
    .responsive {
        width: 49.99999%;
        margin: 6px 0;
    }
}



/*-------------------------------------------------Mobile size screen---------------------------------------*/
@media only screen and (max-width: 580px) {

    /*-----------------------Footer Media queries--------------------------*/
    /*I hid the footer row button on smaller screens as it gets a little too cramped*/
    .footer-row button {
        display: none;
    }

    #contact-details {
        text-align: center;
        margin-top: 5px;
        margin-left: 5px;
    }

    #social-icons {
        text-align: center;
        margin-top: 5px;
    }

    .call-button {
        text-align: center;
        margin-top: 10px;
    }

    .text-field {
        width: 90%;
        font-size: 16px;
    }

    /*-----------------------Home page Media queries--------------------------*/

    .home-container .spash-image {
        width: 90vw;
        margin-top: 150px;
        margin-bottom: 20px
    }

    .home-container .main-message {
        width: 90vw;
    }

    /*-----------------------Prices page Media queries--------------------------*/
    #main-prices .row {
        margin-top: 8%;
    }

    #main-prices ol {
        padding-inline-start: 1px;
    }

    #main-prices .row {
        margin-top: 0;
    }

    #main-prices .list-unstyled {
        margin-top: 10px;
        margin-bottom: 98px;
    }
    
    /*-----------------------Gallery page Media queries--------------------------*/
    
    .responsive {
        width: 100%;
    }


    /*-----------------------Contact page Media queries--------------------------*/
    .form-container {
        padding: 20px;
        width: 90%;
    }



}

